Removed about from navigation Fixed hidden sidebar menu not blurring properly

--- a/src/components/navigation/sidebar/sidebar.module.css
+++ b/src/components/navigation/sidebar/sidebar.module.css
@@ -2,16 +2,28 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    z-index: 2;
     right: 0;
     top: 0;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
+    text-align: center;
     gap: 1em;
     align-items: center;
-    border: 5px solid white;
-    backdrop-filter: blur(100%);
+    backdrop-filter: blur(100px);
 }
 
+.hidden_menu_items > *:first-child {
+    width: 100%;
+    font-size: 4.5em;
+    border-bottom: 2px solid white;
+}
+.hidden_menu_items > a {
+    background-color: rgb(23, 51, 112);
+    padding: 0.5em 2em 0.5em 2em;
+}
 .expanded_menu_items {
     display: flex;
     flex-direction:row;
